--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,54 +1,50 @@
 # Core Flask and Web Framework
-Flask==2.3.3
+Flask==3.0.0
 Flask-CORS==4.0.0
 Flask-Session==0.5.0
 
 # Database
-mysql-connector-python==8.1.0
+mysql-connector-python==8.2.0
 
-# Data Processing
-pandas==2.0.3
-numpy==1.24.3
+# Data Processing  
+pandas==2.1.4
+numpy==1.25.2
 openpyxl==3.1.2
 xlrd==2.0.1
 
 # Authentication and Security
-bcrypt==4.0.1
+bcrypt==4.1.2
 
 # File Transfer
-paramiko==3.3.1
+paramiko==3.4.0
 
 # Data Validation and Analysis
-numexpr==2.8.5
+numexpr==2.8.8
 
 # Environment Management
 python-dotenv==1.0.0
-
-# Utilities
-secrets==1.0.0
-logging==0.4.9.6
 
 # Date and Time
 python-dateutil==2.8.2
 
 # Text Processing
-regex==2023.8.8
+regex==2023.12.25
 
 # Math and Statistics
-scipy==1.11.2
-scikit-learn==1.3.0
+scipy==1.11.4
+scikit-learn==1.3.2
 
 # Caching (optional)
-redis==4.6.0
+redis==5.0.1
 
-# Testing
-pytest==7.4.0
-pytest-cov==4.1.0
+# Testing (optional for production)
+# pytest==7.4.3
+# pytest-cov==4.1.0
 
-# Development Tools
-black==23.7.0
-flake8==6.0.0
-mypy==1.5.1
+# Development Tools (optional for production)
+# black==23.12.1
+# flake8==7.0.0
+# mypy==1.8.0
 
 # Production Server
 gunicorn==21.2.0
