--- a/App/nixpacks.toml
+++ b/App/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['python311']
 
 [phases.install] 
-cmds = ['cd App && pip install --upgrade pip setuptools wheel', 'cd App && pip install -r requirements.txt']
+cmds = ['pip install --upgrade pip setuptools wheel', 'pip install -r requirements.txt']
 
 [start]
-cmd = 'cd App && python run.py'
+cmd = 'python run.py'
