--- a/App/nixpacks.toml
+++ b/App/nixpacks.toml
@@ -2,7 +2,10 @@
 nixPkgs = ['python311']
 
 [phases.install] 
-cmds = ['pip install --upgrade pip setuptools wheel', 'pip install -r requirements.txt']
+cmds = [
+  'python -m pip install --upgrade pip setuptools wheel',
+  'python -m pip install -r requirements.txt'
+]
 
 [start]
 cmd = 'python run.py'
